[package]
name = "rocket"
version = "0.1.0"
authors = ["Ryan Allred <Ryan@Allred.xyz>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = {version = "0.3.3"}
maud = { version = "*", features = ["rocket"] }
diesel = { version = "0.16.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
